// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeDataView should be fetched children nodes 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "active": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporationId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "createTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "nameSpell": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "order": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "updateTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "version": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "6Rk9l1WYNM0400:72092047",
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:72092047",
  "name": "线上支持组",
  "nameSpell": "XIANSHANGZHICHIZU",
  "order": 72092047,
  "parentId": Object {
    "id": "6Rk9l1WYNM0400:50128174",
    "type": "organization.Department",
  },
  "updateTime": 1574211989469,
  "version": 1,
}
`;

exports[`TreeDataView should be fetched parent node 1`] = `
Object {
  "__META__": Object {
    "collection": undefined,
    "fields": Object {
      "active": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "children": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "property": undefined,
          "type": 1,
        },
      },
      "code": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "corporationId": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "createTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "id": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "name": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "nameSpell": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "order": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "parentId": Object {
        "defaultValue": undefined,
        "referenceDef": Object {
          "model": "organization.Department",
          "type": 0,
        },
      },
      "updateTime": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
      "version": Object {
        "defaultValue": undefined,
        "referenceDef": false,
      },
    },
    "id": "6Rk9l1WYNM0400:50128174",
    "type": "organization.Department",
  },
  "active": true,
  "children": Array [
    Object {
      "id": "6Rk9l1WYNM0400:72167029",
      "type": "organization.Department",
    },
  ],
  "code": "",
  "corporationId": "6Rk9l1WYNM0400",
  "createTime": 1574211989469,
  "id": "6Rk9l1WYNM0400:50128174",
  "name": "测试支持大部3",
  "nameSpell": "CESHIZHICHIDABU3",
  "order": 2,
  "parentId": Object {
    "id": "6Rk9l1WYNM0400:49525176",
    "type": "organization.Department",
  },
  "updateTime": 1574211989469,
  "version": 1,
}
`;
